# amp_sim

./: README.md  bun.lockb  package.json
src/: App.svelte  styles.css  types.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: assistant.rs  audio.rs  config.rs  events.rs  lib.rs  main.rs  tauri_commands.rs
src-tauri/src/audio_backend/: audio_device_manager.rs  audio_pipeline.rs  audio_processor.rs  audio_stream_manager.rs  mod.rs  processor_trait.rs
src-tauri/src/audio_backend/processors/: amplifier.rs  mod.rs  screamer.rs
src-tauri/src/config/: assistant_config.rs  audio_config.rs  config.rs  mod.rs
src/lib/: Assistant.svelte  Devices.svelte  Greet.svelte  Processors.svelte  Settings.svelte
src/lib/icons/: hamburger.svelte
src/routes/: +layout.svelte
