[package]
name = "amp_sim"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
cpal = "0.15.2"
dialoguer = "0.11.0"
hound = "3.5.1"
ringbuf = "0.3.3"
reqwest = {version = "0.11.23", features = ["json"] }
tokio = {version = "1.35.1", features = ["full"] }
regex = "1.10.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
